storage/yamls/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: storage-web
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - host: "storage.carambatv.kube"
    http:
      paths:
      - path: "/"
        backend:
          serviceName: storage-nginx-service
          servicePort: 80
